fix the non visible header

--- a/client/src/Components/CommonComponent/Header/index.css
+++ b/client/src/Components/CommonComponent/Header/index.css
@@ -1,6 +1,7 @@
 .App-header {
   height: 3.6875rem;
-  width: 17.1875rem;
+  /* width: 17.1875rem; */
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
